namespace Retrack.API.Models.Enums;

public enum BatchStatus
{
    DRAFT,
    LISTED,
    ACCEPTED,
    READY_FOR_PICKUP,
    IN_PROGRESS,
    DELIVERED,
    VERIFIED,
    REJECTED,
    CANCELLED
}


