namespace Retrack.API.Models.Enums;

public enum InvoiceStatus { PENDING, UPLOADED, VERIFIED, REJECTED }


