namespace Retrack.API.Models.Enums;

public enum MaterialType
{
    PET, HDPE, PVC, PAPER, CARDBOARD,
    ALUMINUM, IRON, STEEL, COPPER,
    ELECTRONIC_WASTE, OTHER
}


