namespace Retrack.API.Models.Enums;

public enum PartnershipStatus { PENDING, APPROVED, BLOCKED }


