namespace Retrack.API.Models.Enums;

public enum TransportStatus
{
    PENDING,
    ASSIGNED,
    PICKED_UP,
    ON_THE_WAY,
    DELIVERED,
    CANCELLED
}


