namespace Retrack.API.Services.Interfaces;

public interface IPaymentService
{
    // TODO: TV2 implement
}


