namespace Retrack.API.Services.Interfaces;

public interface IQCService
{
    // TODO: TV4 implement
}


