namespace Retrack.API.Models.Enums;

public enum TransportType { SELF_DELIVERY, APP_LOGISTICS }
