namespace Retrack.API.Models.Enums;

public enum UserRole
{
    ADMIN,
    SELLER,
    DEPOT_OWNER,
    DEPOT_EMPLOYEE,
    DRIVER,
    FACTORY
}
