namespace Retrack.API.Services.Interfaces;

public interface IFactoryMarketService
{
    // TODO: TV4 implement
}
